--- a/Advanced_Ens_tech/Stacking/Simargl2022_Stacking_tech.ipynb
+++ b/Advanced_Ens_tech/Stacking/Simargl2022_Stacking_tech.ipynb
@@ -2,9 +2,31 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_2303297/635838729.py:7: DeprecationWarning: \n",
+      "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
+      "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
+      "but was not found to be installed on your system.\n",
+      "If this would cause problems for you,\n",
+      "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
+      "        \n",
+      "  import pandas as pd\n",
+      "2024-03-04 01:40:20.677540: I tensorflow/core/util/port.cc:113] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2024-03-04 01:40:20.710197: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:9261] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "2024-03-04 01:40:20.710222: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:607] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2024-03-04 01:40:20.711276: E external/local_xla/xla/stream_executor/cuda/cuda_blas.cc:1515] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2024-03-04 01:40:20.717099: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 AVX512F AVX512_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2024-03-04 01:40:21.357433: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+     ]
+    }
+   ],
    "source": [
     "# -*- coding: utf-8 -*-\n",
     "# This code is written in Python 3.7. To install the required packages, run the following commands:\n",
@@ -19,6 +41,9 @@
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.neural_network import MLPClassifier\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.decomposition import PCA\n",
+    "from sklearn.pipeline import Pipeline\n",
     "\n",
     "from sklearn.metrics import accuracy_score, classification_report\n",
     "from sklearn.metrics import confusion_matrix\n",
@@ -31,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,6 +72,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "df = df.sample(frac=0.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "dropped_df = ['ALERT']\n",
     "X = df.drop(dropped_df, axis=1)\n",
     "y = df['ALERT']\n",
@@ -57,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,15 +99,62 @@
     "X_train, X_test, y_train, y_test = train_test_split(\n",
     "    X, y, test_size=0.2, random_state=42, stratify=y)\n",
     "\n",
-    "# Convert data to TensorFlow tensors\n",
-    "X_train_tf = tf.convert_to_tensor(X_train.values, dtype=tf.float32)\n",
-    "y_train_tf = tf.convert_to_tensor(pd.factorize(y_train)[0], dtype=tf.int64)\n",
-    "X_test_tf = tf.convert_to_tensor(X_test.values, dtype=tf.float32)\n",
+    "# Feature Scaling using StandardScaler\n",
+    "scaler = StandardScaler()\n",
+    "X_train_scaled = scaler.fit_transform(X_train)\n",
+    "X_test_scaled = scaler.transform(X_test)\n",
+    "\n",
+    "\n",
+    "# Dimensionality Reduction using PCA\n",
+    "pca = PCA(n_components=0.95)\n",
+    "X_train_pca = pca.fit_transform(X_train_scaled)\n",
+    "X_test_pca = pca.transform(X_test_scaled)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Using MirroredStrategy with devices ('/job:localhost/replica:0/task:0/device:GPU:0', '/job:localhost/replica:0/task:0/device:GPU:1')\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-03-04 01:41:49.872867: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1929] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 45551 MB memory:  -> device: 0, name: NVIDIA RTX A6000, pci bus id: 0000:67:00.0, compute capability: 8.6\n",
+      "2024-03-04 01:41:49.873454: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1929] Created device /job:localhost/replica:0/task:0/device:GPU:1 with 45492 MB memory:  -> device: 1, name: NVIDIA RTX A6000, pci bus id: 0000:68:00.0, compute capability: 8.6\n",
+      "/home/ibibers@ads.iu.edu/micromamba/lib/python3.9/site-packages/sklearn/linear_model/_logistic.py:458: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  n_iter_i = _check_optimize_result(\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
+   "source": [
     "\n",
     "# Initialize MirroredStrategy for GPU acceleration\n",
     "strategy = tf.distribute.MirroredStrategy()\n",
-    "\n",
-    "\n",
     "\n",
     "# Train the models\n",
     "with strategy.scope():\n",
@@ -83,38 +164,38 @@
     "    lr_model = LogisticRegression()\n",
     "    dst_model = DecisionTreeClassifier()\n",
     "\n",
-    "    # Train the models\n",
-    "    rf_model.fit(X_train, y_train)\n",
-    "    nn_model.fit(X_train, y_train)\n",
-    "    lr_model.fit(X_train, y_train)\n",
-    "    dst_model.fit(X_train, y_train)\n",
-    "\n",
-    "    # Make predictions models\n",
-    "    rf_pred = rf_model.predict(X_test)\n",
-    "    nn_pred = nn_model.predict(X_test)\n",
-    "    lr_pred = lr_model.predict(X_test)\n",
-    "    dst_pred = dst_model.predict(X_test)\n",
+    "    # Build a pipeline for each model with PCA\n",
+    "    rf_pipeline = Pipeline([('pca', PCA(n_components=0.95)), ('rf', rf_model)])\n",
+    "    nn_pipeline = Pipeline([('pca', PCA(n_components=0.95)), ('nn', nn_model)])\n",
+    "    lr_pipeline = Pipeline([('pca', PCA(n_components=0.95)), ('lr', lr_model)])\n",
+    "    dst_pipeline = Pipeline([('pca', PCA(n_components=0.95)), ('dst', dst_model)])\n",
     "\n",
     "    meta_model = DecisionTreeClassifier()\n",
     "    \n",
     "    from sklearn.ensemble import StackingClassifier\n",
     "    # Stack models using StackingClassifier\n",
+    "\n",
+    "      # Stack models using LightGBM\n",
     "    stacked_model = StackingClassifier(estimators=[\n",
-    "        ('rf', rf_model),\n",
-    "        ('nn', nn_model),\n",
-    "        ('lr', lr_model),\n",
-    "        ('dst', dst_model),\n",
-    "        # ('svm', svm_model)\n",
+    "        ('rf', rf_pipeline),\n",
+    "        ('nn', nn_pipeline),\n",
+    "        ('lr', lr_pipeline),\n",
+    "        ('dst', dst_pipeline),\n",
     "    ], final_estimator=meta_model)\n",
     "\n",
     "    # Train the stacked model\n",
-    "    stacked_model.fit(X_train, y_train)\n",
+    "    stacked_model.fit(X_train_pca, y_train)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
-    "    # Make predictions with the stacked model\n",
-    "    stacked_pred__encoded = stacked_model.predict(X_test)\n",
-    "\n",
-    "# # Convert probabilities to TensorFlow tensors\n",
-    "# pred_tf = tf.convert_to_tensor(y_pred_enc, dtype=tf.float32)"
+    "# Make predictions with the stacked model\n",
+    "stacked_pred_encoded = stacked_model.predict(X_test_pca)"
    ]
   },
   {
