--- a/Simple_Ensemble_Techniques/Base_model.ipynb
+++ b/Simple_Ensemble_Techniques/Base_model.ipynb
@@ -2,6 +2,68 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_2383815/3131347128.py:22: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "  final_subset = pd.concat([subset_df_normal_sampled, subset_df_dos_sampled, df[df['ALERT'] != 'Normal'][df['ALERT'] != 'Denial of Service']])\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Extract subsample of data: \n",
+      "ALERT\n",
+      "Port Scanning        4170194\n",
+      "Normal                500000\n",
+      "Denial of Service     500000\n",
+      "Malware                  571\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "df = pd.read_csv(\n",
+    "    '/home/ibibers@ads.iu.edu/IDS_Datasets/Combined_datasets/Simargl_cleaned_dataset.csv')\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Set the desired number of records for 'Normal' and 'Denial of Service' labels\n",
+    "desired_records_normal = 500000  # Change this to your desired number for 'Normal'\n",
+    "desired_records_dos = 500000  # Change this to your desired number for 'Denial of Service'\n",
+    "\n",
+    "# Filter data for 'Normal' and 'Denial of Service'\n",
+    "subset_df_normal = df[df['ALERT'] == 'Normal']\n",
+    "subset_df_dos = df[df['ALERT'] == 'Denial of Service']\n",
+    "\n",
+    "# Sample the desired number of records from each class\n",
+    "subset_df_normal_sampled = subset_df_normal.sample(n=desired_records_normal, random_state=42)\n",
+    "subset_df_dos_sampled = subset_df_dos.sample(n=desired_records_dos, random_state=42)\n",
+    "\n",
+    "# Combine the subsets with the rest of the data\n",
+    "final_subset = pd.concat([subset_df_normal_sampled, subset_df_dos_sampled, df[df['ALERT'] != 'Normal'][df['ALERT'] != 'Denial of Service']])\n",
+    "\n",
+    "# Optional: Shuffle the final subset\n",
+    "final_subset = final_subset.sample(frac=1, random_state=42)\n",
+    "\n",
+    "# Now 'final_subset' contains a subsample with the desired number of records for 'Normal' and 'Denial of Service' labels\n",
+    "# while keeping all other labels unchanged\n",
+    "\n",
+    "# Extract subsample of data\n",
+    "print(\" Extract subsample of data: \")\n",
+    "print(final_subset['ALERT'].value_counts())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
